introduces flag "-Dyasm4u.loggc" to log gc stats in MR operations