@@ -379,6 +379,7 @@ public class YtMREnv extends RemoteMREnv {
 
     options.add("/usr/local/java8/bin/java "
       + (Boolean.getBoolean("yasm4u.enableJMX")? "-Dcom.sun.management.jmxremote " : "")
+      + (Boolean.getBoolean("yasm4u.loggc")? "-Xloggc:/dev/stderr -XX:+PrintGCDetails":"")
       + " -XX:-UsePerfData -Xmx2G -Xms2G -jar " + jar.getName());
     int inputCount = 0;
     for(final MRPath sh : in) {
